quote spacing fix on mobile

--- a/apsc-collab-css/partials/_layout.scss
+++ b/apsc-collab-css/partials/_layout.scss
@@ -645,3 +645,9 @@ h1 {
         display: none;
     }
 }
+
+@media only screen and (max-width: $break-mobile) {
+    .separate-page{
+        display:none;
+    }
+}
